# claudePA

./: .gitignore  CLAUDE.md  README.md  SPEC-v2.md  SPEC.md  pyproject.toml  schedule.yaml
calendar/: 2026-07-21T12-00-00-serendipity-1.md
cloudflare-worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
core-memory/: australia-plan.md  current-location.md  family.md  outlook-axes.yaml  people.md  policies.md  profile.md  skip-patterns.md  usage.json
digests/: findings.md
docs/: setup-calendar.md  setup-gcal.md  setup-gmail.md
drafts/: 2026-05-17-relance-mail-affine-seminar-apply-for-in-person-opportunity.md  2026-05-17-relance-mail-invitation-mise-a-jour-expediteur-inconnu-cohor.md  2026-05-17-relance-mail-invitation-piscine-13-30-selon-meteo-lun-18-mai.md  2026-05-23-relance-mail-invitation-piscine-13-30-selon-meteo-lun-25-mai.md  2026-05-23-relance-mail-nouveau-message-pour-donne-sommier-et-matelas-1.md
feedback/: 2026-07-16T21-34-17-serendipity.md  2026-07-17T08-26-31-local_activities.md
inbox/: 2026-05-15T16-54-08-perso-16.md  2026-05-15T17-23-19-perso-18.md  2026-05-15T18-59-49-perso-21.md  2026-05-16T14-44-26-perso-24.md  2026-05-16T14-46-49-perso-27.md  2026-05-16T15-16-46-perso-31.md  2026-05-17T09-16-35-perso-36.md  2026-05-17T09-33-48-perso-38.md  2026-05-17T09-33-53-perso-40.md  2026-05-17T09-33-58-perso-42.md  2026-05-17T09-34-36-perso-47.md  2026-05-17T09-37-09-perso-50.md  2026-05-17T09-37-46-perso-53.md
journal/: decisions.md
prompts/: README.md  activities_next10days.md  ai_jobs_formations.md  health_watch.md  (+4 more)
(+435 files in other folders)
