[project]
name = "claudepa"
version = "0.1.0"
description = "Assistant personnel cloud — Sylvain Ribes"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.140",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "warning"
